Fix z-index of pagination, so that appear below the header #1

--- a/css/main.css
+++ b/css/main.css
@@ -172,6 +172,7 @@
   bottom: 40px;
   left: 0;
   right: 0;
+  z-index: 0;
 }
 .notice .promotion .swiper-pagination .swiper-pagination-bullet {
   background-color: transparent;
